<resources>
    <string name="app_name">Vocal Synth MDEA</string>
    <string name="frequency_label">Frequency</string>
    <string name="gain_label">Gain</string>
    <string name="voice_type_label">Voice type</string>
    <string name="vowel_label">Vowel</string>
    <string name="vibrato_frequency_label">Vibrato frequency</string>
    <string name="vibrato_gain_label">Vibrato gain</string>
    <string name="start_experiment_button">Inizia esperimento</string>
    <string name="test_button">Test</string>
    <string name="settings_button">settings</string>
    <string name="a_vowel">A</string>
    <string name="e_vowel">E</string>
    <string name="i_vowel">I</string>
    <string name="o_vowel">O</string>
    <string name="u_vowel">U</string>
    <string name="confirm_button">Conferma</string>
    <string name="experiment_description">L\'esperimento consiste nell\'ascoltare vari suoni prodotti da un sintetizzatore vocale, e per ognuno di essi specificare quale voale si sta ascoltando. \n\nPer attivare/disattivare l\'audio usa la seguente icona.\n\n</string>
    <string name="share_button">Esporta risultati</string>
    <string name="exportChooserTitle">Esporta…</string>
    <string name="exportFailed">Nessun risultato da esportare!</string>
    <string name="thank_you">Pollice in su.</string>
    <string name="finish_title">Grazie per la partecipazione!!</string>
    <string name="single_export_button">Esporta risultato</string>
    <string name="error">Errore</string>
    <string name="io_error">Errore durante la scrittura dei dati!</string>
    <string name="stream_closing_error">Errore durante il salvataggio dei dati!</string>
    <string name="progress_format">Test: %d/%d</string>
    <string name="settings_vowel_synth">Sintetizzatore vocale</string>
    <string name="settings_experiments">Esperimenti</string>
    <string name="settings_samples_number_title">Numero di test</string>
    <string name="settings_samples_number_summary">Numero di prove da fare in un esperimento.</string>
    <string name="settings_directory_title">Nome cartella risultati</string>
    <string name="settings_directory_summary">Coincide anche con il nome del file zip dei risultati</string>
    <string name="settings_block_size_key">block_size</string>
    <string name="settings_sampling_rate_key">sampling_rate</string>
    <string name="settings_samples_number_key">samples_number</string>
    <string name="settings_result_directory_key">result_directory</string>
    <string name="f_gender">Femmina</string>
    <string name="m_gender">Maschio</string>
</resources>
