<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context="com.example.mariorandazzo.vocalsynth.ExperimentActivity">


    <TextView
        android:id="@+id/experiment_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:text="@string/experiment_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <ToggleButton
        android:id="@+id/audio_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/experiment_description"
        android:layout_centerHorizontal="true"
        android:background="@drawable/audio_toggle"
        android:checked="false"
        android:textOff=""
        android:textOn="" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/audio_toggle"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="test: 1/15"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/vowel_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_vowel" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_vowel" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_vowel" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_vowel" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u_vowel" />

    </RadioGroup>

    <Button
        android:id="@+id/confirm_button"
        style="@style/button_style"
        android:layout_below="@id/vowel_radio_group"
        android:enabled="false"
        android:onClick="confirmResponse"
        android:text="@string/confirm_button" />


</RelativeLayout>
