<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="com.example.mariorandazzo.vocalsynth.activities.FinishActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/finish_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorOnPrimary" />

    <ImageView
        android:id="@+id/thumb_image"
        android:layout_width="wrap_content"
        android:layout_height="235dp"
        android:layout_below="@id/title"
        android:contentDescription="@string/thank_you"
        android:src="@mipmap/thumb" />

    <Button
        android:id="@+id/export_button"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="export"
        android:text="@string/single_export_button" />

</RelativeLayout>
